# prometheus-red-team-bot

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  USAGE.md  pyproject.toml  pytest.ini  requirement.md  requirements-dev.txt  requirements.txt  run_glm.sh
prometheus-red/core/: .env.example  README.md  USAGE.md  master-prompt.md  pyproject.toml  requirements.txt
prometheus-red/core/promptheus/: config.py  main.py
prometheus-red/core/promptheus/adapters/: __init__.py  base.py  local.py  rest.py  slack.py
prometheus-red/core/promptheus/core/: attack_runner.py  engine.py  judge.py  loader.py  models.py
prometheus-red/core/promptheus/core/attacks/: __init__.py  loader.py  payloads.json  payloads_toollist.md
prometheus-red/core/promptheus/core/skills/: __init__.py
prometheus-red/core/promptheus/core/skills/injections/: json_leak.md
prometheus-red/core/promptheus/data/sessions/: 01cec949-909a-4bbd-808a-757013cbc0ba.json  03a2c2ae-98bb-4f0a-96df-ebfc34138154.json  082d7c87-c09a-4c51-837c-392835ae1fdd.json  0c931065-7ae3-42ad-b5d1-721e4f0bb6e3.json  14fa9231-3f79-4c72-a0f5-c1a66c585ec5.json  18de704f-7f66-47b7-b690-bf8f7686da44.json  1a760cd5-39f8-4883-ae5a-a12a00f6c7f3.json  274d3e33-07c1-4049-bfe6-f37ab5f4e91b.json  2925a6f4-9615-4b6a-89c6-e41f8d324227.json  29a39fff-2a33-4541-84b4-d6fbf6f412d7.json  2ad19614-a9eb-4fed-b9bb-a5ef4a4497c8.json  2e61fefc-32df-4dbd-a5e3-c5051581d064.json  2f9a907c-8bfa-4a41-b9b9-f67ec176fad4.json  30220176-94cd-4d1b-a82d-fe0bcab19728.json  3bd49d08-a842-4702-a735-211e86a5b8b7.json  4095e906-74b4-4163-aaa8-789989487972.json  4afd9ad8-7013-4d23-a1a0-3158c33a78cb.json  5289db62-80c2-4d3c-a1ae-3938dbe1f7d4.json  56071f09-808b-4aa6-8b93-00aadc1a6da9.json  60042cca-bb3b-4c47-8e09-eabfeedfeab3.json  6180ea8c-f8a0-44e0-a239-5bc99c71e3b7.json  6204ca12-5cf9-483d-a6fd-d7c15d6e8a07.json  679d008f-4efe-4ce5-bd88-2351119815fb.json  69525510-aa6c-48f5-8d16-6bc2be462164.json  7081b9e0-0cac-4be4-a2b0-931481571575.json  7a63f8bc-93de-4421-b57a-3bab3dd6ad59.json  7d2979ff-c825-4995-a8bb-b62420440857.json  7e88ef8a-a16e-4d74-9a11-623b624a0650.json  804c5022-babb-4a10-ab74-b575f76a18b6.json  81c187fc-83f9-4e6a-adb8-46308f0f12ff.json  89b9271e-dc66-4fab-9bf3-e49dc8d64133.json  8a7a54f7-8204-4866-9a95-b0f82af8eec9.json  8cdda05f-3e71-4446-8b11-85803274d71c.json  9522a3a2-2ae5-4d9a-afd0-65e2cfe99ffd.json  9551e285-89e7-485e-bcc5-28f353c780cb.json  9a64adb5-2cd1-4a6c-911f-26de256aa58d.json  9aa94b49-b230-4f63-acdb-97a6f91dc3c9.json  9b67a571-8935-4e9c-92f6-f395495d0632.json  9efe7961-386d-44bb-9db5-444e5e2c9dc6.json  ac0efc52-59f1-4d24-a994-b2161db0e9af.json  (+18 more)
prometheus-red/core/promptheus/interfaces/: cli.py  slack_bot.py
prometheus-red/core/promptheus/utils/: loop_breaker.py  robustness.py
prometheus-red/core/tests/: conftest.py  test_adapters.py  test_cli.py  test_engine.py  test_judge.py  test_loader.py  test_models.py  test_robustness.py  test_slack_adapter.py
(+269 files in other folders)
