[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptheus"
dynamic = ["version"]
description = "Proactive Red-team Operator for Model PenTesting & Heuristic Exploit Utility System"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.21.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100.0", "uvicorn[standard]>=0.22.0"]
all = ["fastapi>=0.100.0", "uvicorn[standard]>=0.22.0"]

[project.scripts]
promptheus = "apps.cli.main:run_app"

[tool.hatch.version]
path = "promptheus/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["promptheus", "apps"]
