[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptheus"
dynamic = ["version"]
description = "Proactive Red-team Operator for Model PenTesting & Heuristic Exploit Utility System"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.21.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "claude-agent-sdk",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100.0", "uvicorn[standard]>=0.22.0"]
all = ["fastapi>=0.100.0", "uvicorn[standard]>=0.22.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.92.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.92.0",
]

[project.scripts]
promptheus = "apps.cli.main:run_app"

[tool.hatch.version]
path = "promptheus/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["promptheus", "apps"]
exclude = [
    "**/node_modules",
    "**/node_modules/**",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "**/node_modules",
    "**/node_modules/**",
    ".git",
    "dist",
]
